# embedding_service

./: Dockerfile  README.md  app.py  docker-compose.yml  install.sh  load_test.py  optimal_workers.py  pyproject.toml  requirements.txt  server.py  test_runpod_inference.py
config/: config.yaml
src/api/routes/: embedding_routes.py  metrics_routes.py  status_routes.py
src/models/: pydantic_models.py
src/services/: cache_service.py  metrics_service.py  request_tracker.py  worker.py
src/utils/: config_loader.py  constants.py  logger.py
