[project]
name = "embedding-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Shashi Raj"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "typer (>=0.15.1,<0.16.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
